--- a/template/header.html
+++ b/template/header.html
@@ -1,49 +1,68 @@
-      <ul class="navbar navbar-default navbar-fixed-top navbar-inverse">
-		         <li  class="btn btn-info animated bounceInLeft">
-		         	<a ui-sref="menu">
-		         		 <span class="glyphicon glyphicon-list-alt">&nbsp;</span>
-		         		 Inicio 
-		         	</a>
-		         </li>
-		         <li class="btn btn-info animated bounceInLeft" ng-if="esVisible.admin">
-		         	<a ui-sref="altaUsuario" ng-if="esVisible.admin">
-		         		<span class="glyphicon glyphicon-plus-sign">&nbsp;</span>
-		         		Alta Usuarios
-		         	</a>
-		         <li  class="btn btn-info animated bounceInLeft" ng-if="esVisible.admin">
-		         	<a ui-sref="altaLocal" ng-if="esVisible.admin"> 
-		         		<span class="glyphicon glyphicon-plus-sign" >&nbsp;</span>
-		         			Alta Local</a>
-		         		</li>
-		         </li>
-		         <li  class="btn btn-info animated bounceInLeft" ng-if="esVisible.admin">
-		         	<a ui-sref="grillaUsuario" ng-if="esVisible.admin"> 
-		         		<span class="glyphicon glyphicon-th" >&nbsp;</span>
-		         			Usuarios</a>
-		         		</li>
-		         <li  class="btn btn-info animated bounceInLeft" ng-if="esVisible.admin || esVisible.user">
-		         	<a ui-sref="grillaLocal" g-if="esVisible.admin || esVisible.user"> 
-		         		<span class="glyphicon glyphicon-th" >&nbsp;</span>
-		         			Locales</a>
-		         		</li>
-		         <li  class="btn btn-info animated bounceInLeft" ng-if="esVisible.admin || esVisible.cliente">
-		         	<a ui-sref="grillaInforme" ng-if="esVisible || esVisible.cliente"> 
-		         		<span class="glyphicon glyphicon-th-list" >&nbsp;</span>
-		         			Informes</a>
-		         		</li>
+ <!-- COMIENZO JUMBOTRON -->
+<section class="jumbotron">
+	<div class="container">
+		<h1 class="titulo-blog"><b>Mistery</b> Shopper</h1>
+		<p>TP Final Laboratorio IV 2016</p>
+	</div>
+</section>
+<!-- FIN JUMBOTRON -->
 
-		         <li  class="btn btn-info animated bounceInLeft" ng-if="esVisible.admin || esVisible.cliente">
-		         	<a ui-sref="reporte" ng-if="esVisible || esVisible.cliente"> 
-		         		<span class="glyphicon glyphicon-th-list" >&nbsp;</span>
-		         			Reportes</a>
-		         		</li>
-		         <!-- <li  class="btn btn-info animated bounceInLeft">
-		         	<a ng-click="Logout()"> 
-		         		<span class="glyphicon glyphicon-off" >&nbsp;</span>
-		         			Cerrar Sesión</a>
-		         		</li> -->
-		         <li class="nav navbar-nav navbar-right btn btn-success">
-		         		<a  class="animated bounceInRight" ui-sref="perfil">Bienvenido: {{usuario.nombre}} &nbsp;<img  class="fotoGrilla" ng-src="imagenes/{{usuario.foto}}" alt="imagen"></a>
-		         </li>
-		         	
-      </ul>
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navegacion-ms">
+				<span class="sr-only">Desplegar / Ocultar Menu</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a href="#" class="navbar-brand">MS</a>
+		</div>
+
+		<!-- COMIENZO MENU -->
+		<div class="collapse navbar-collapse" id="navegacion-ms">
+			<ul class="nav navbar-nav">
+				<li><a ui-sref="menu"><span class="glyphicon glyphicon-home"></span></a></li>
+				<!-- <li class="dropdown" role="menu">
+					<a href="#" "uib-dropdown-toggle" data-toggle="dropdown" role="button">
+						Negocios <span class="caret"></span>
+					</a>
+					<ul "dropdown-menu">
+						<li><a ui-sref="grilla">Grilla</a></li>
+						<li><a ui-sref="alta">Alta</a></li>
+					</ul>
+				</li> -->
+				<li uib-dropdown>
+					<a uib-dropdown-toggle>Usuarios<span class="caret"></span></a>
+					<ul uib-dropdown-menu>
+						<li><a ui-sref="grillaUser">Grilla</a></li>
+						<li><a ui-sref="altaUser">Agregar Usuario</a></li>
+					</ul>
+				</li>
+				<li uib-dropdown>
+					<a uib-dropdown-toggle>Negocios<span class="caret"></span></a>
+					<ul uib-dropdown-menu>
+						<li><a ui-sref="grilla">Grilla</a></li>
+						<li><a ui-sref="alta">Agregar negocio</a></li>
+					</ul>
+				</li>
+<!-- 				<li uib-dropdown>
+					<a uib-dropdown-toggle>Informes<span class="caret"></span></a>
+					<ul uib-dropdown-menu>
+						<li><a ui-sref="grillaInformes">Grilla</a></li>						
+					</ul>
+				</li> -->
+				<li><a ui-sref="grillaInformes">Grilla Informes</a></li>
+				<!--<li><DirectivaDos><label>usuario: {{nombreUs}}</label><DirectivaDos></li>-->
+
+
+			<!-- 	<li><a ui-sref="altaUser">Alta Usuarios</a></li>
+				<li><a ui-sref="altaInforme">Alta Informes</a></li>
+				<li><a ui-sref="grilla">Grilla Negocios</a></li>
+				<li><a ui-sref="grillaUser">Grilla Usuarios</a></li>
+				<li><a ui-sref="grillaInformes">Grilla Informes</a></li> -->
+				<!--<li></li>
+				<li></li>
+				<li><a ui-sref="">Usuario: {{usuario.nombre}}</a></li>-->
+			</ul>
+</div>							
