Menú del header casi listo

--- a/template/header.html
+++ b/template/header.html
@@ -35,15 +35,17 @@
 				<li uib-dropdown>
 					<a uib-dropdown-toggle>Usuarios<span class="caret"></span></a>
 					<ul uib-dropdown-menu>
-						<li><a ui-sref="grillaUser">Grilla</a></li>
-						<li><a ui-sref="altaUser">Agregar Usuario</a></li>
+						<li><a ui-sref="grillaUsuario">Grilla</a></li>
+						<li><a ui-sref="altaUsuario">Agregar Usuario</a></li>
+						<li><a ui-sref="modificarUsuario">Modificar Usuario</a></li>
 					</ul>
 				</li>
 				<li uib-dropdown>
-					<a uib-dropdown-toggle>Negocios<span class="caret"></span></a>
+					<a uib-dropdown-toggle>Locales<span class="caret"></span></a>
 					<ul uib-dropdown-menu>
-						<li><a ui-sref="grilla">Grilla</a></li>
-						<li><a ui-sref="alta">Agregar negocio</a></li>
+						<li><a ui-sref="grillaLocal">Grilla</a></li>
+						<li><a ui-sref="altaLocal">Agregar local</a></li>
+						<li><a ui-sref="modificarLocal">Modificar local</a></li>
 					</ul>
 				</li>
 <!-- 				<li uib-dropdown>
@@ -52,7 +54,7 @@
 						<li><a ui-sref="grillaInformes">Grilla</a></li>						
 					</ul>
 				</li> -->
-				<li><a ui-sref="grillaInformes">Grilla Informes</a></li>
+				<li><a ui-sref="grillaInforme">Grilla Informes</a></li>
 				<!--<li><DirectivaDos><label>usuario: {{nombreUs}}</label><DirectivaDos></li>-->
 
 
