--- a/template/header.html
+++ b/template/header.html
@@ -1,70 +1,60 @@
- <!-- COMIENZO JUMBOTRON -->
+  <!-- COMIENZO JUMBOTRON -->
 <section class="jumbotron">
-	<div class="container">
-		<h1 class="titulo-blog"><b>Mistery</b> Shopper</h1>
-		<p>TP Final Laboratorio IV 2016</p>
-	</div>
+    <div class="container">
+        <h1 class="titulo-blog"><b>Mistery</b> Shopper</h1>
+        <p>TP Final Laboratorio IV 2016</p>
+
+        <!-- <li class="nav navbar-nav navbar-right">
+            <a ui-sref="perfil">{{usuario.nombre}} &nbsp;<img  class="fotoGrilla" ng-src="imagenes/{{usuario.foto}}" alt="imagen"></a>
+        </li> -->
+
+
+    </div>
 </section>
 <!-- FIN JUMBOTRON -->
 
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navegacion-ms">
-				<span class="sr-only">Desplegar / Ocultar Menu</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a href="#" class="navbar-brand">MS</a>
-		</div>
 
-		<!-- COMIENZO MENU -->
-		<div class="collapse navbar-collapse" id="navegacion-ms">
-			<ul class="nav navbar-nav">
-				<li><a ui-sref="menu"><span class="glyphicon glyphicon-home"></span></a></li>
-				<!-- <li class="dropdown" role="menu">
-					<a href="#" "uib-dropdown-toggle" data-toggle="dropdown" role="button">
-						Negocios <span class="caret"></span>
-					</a>
-					<ul "dropdown-menu">
-						<li><a ui-sref="grilla">Grilla</a></li>
-						<li><a ui-sref="alta">Alta</a></li>
-					</ul>
-				</li> -->
-				<li uib-dropdown>
-					<a uib-dropdown-toggle>Usuarios<span class="caret"></span></a>
-					<ul uib-dropdown-menu>
-						<li><a ui-sref="grillaUsuario">Grilla</a></li>
-						<li><a ui-sref="altaUsuario">Agregar Usuario</a></li>
-						<li><a ui-sref="modificarUsuario">Modificar Usuario</a></li>
-					</ul>
-				</li>
-				<li uib-dropdown>
-					<a uib-dropdown-toggle>Locales<span class="caret"></span></a>
-					<ul uib-dropdown-menu>
-						<li><a ui-sref="grillaLocal">Grilla</a></li>
-						<li><a ui-sref="altaLocal">Agregar local</a></li>
-						<li><a ui-sref="modificarLocal">Modificar local</a></li>
-					</ul>
-				</li>
-<!-- 				<li uib-dropdown>
-					<a uib-dropdown-toggle>Informes<span class="caret"></span></a>
-					<ul uib-dropdown-menu>
-						<li><a ui-sref="grillaInformes">Grilla</a></li>						
-					</ul>
-				</li> -->
-				<li><a ui-sref="grillaInforme">Grilla Informes</a></li>
-				<!--<li><DirectivaDos><label>usuario: {{nombreUs}}</label><DirectivaDos></li>-->
+ <!-- <div class="navbar navbar-inverse avbar-fixed-top"> -->
+ <div class="navbar navbar-inverse navbar-static-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand">Foo's Bar</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        
+                        <li uib-dropdown>
+                            <a uib-dropdown-toggle>Usuarios<span class="caret"></span></a>
+                            <ul uib-dropdown-menu>
+                                <li><a ui-sref="grillaUsuario">Grilla</a></li>
+                                <li><a ui-sref="altaUsuario">Agregar Usuario</a></li>
+                                <li><a ui-sref="modificarUsuario">Modificar Usuario</a></li>
+                            </ul>
+                        <li uib-dropdown>
+                            <a uib-dropdown-toggle>Locales<span class="caret"></span></a>
+                            <ul uib-dropdown-menu>
+                                <li><a ui-sref="grillaLocal">Grilla</a></li>
+                                <li><a ui-sref="altaLocal">Agregar local</a></li>
+                                <li><a ui-sref="modificarLocal">Modificar local</a></li>
+                            </ul>
+                        <li><a ui-sref="grillaInforme">Grilla Informes</a></li>
+                    
+                </li>
+                </li>                        
+                    </ul>
+                    
+                        
+                    
+                    <ul class="nav navbar-nav navbar-right">
+                        <a  class="animated bounceInRight" ui-sref="perfil">Bienvenido: {{usuario.nombre}} &nbsp;<img  class="fotoGrilla" ng-src="imagenes/{{usuario.foto}}" alt="imagen"></a>
+                    </ul>
 
+                </div>
 
-			<!-- 	<li><a ui-sref="altaUser">Alta Usuarios</a></li>
-				<li><a ui-sref="altaInforme">Alta Informes</a></li>
-				<li><a ui-sref="grilla">Grilla Negocios</a></li>
-				<li><a ui-sref="grillaUser">Grilla Usuarios</a></li>
-				<li><a ui-sref="grillaInformes">Grilla Informes</a></li> -->
-				<!--<li></li>
-				<li></li>
-				<li><a ui-sref="">Usuario: {{usuario.nombre}}</a></li>-->
-			</ul>
-</div>							
+            </div>
+        </div>
