--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body, html{
      height: 100%;
  	background-repeat: no-repeat;
- 	/*background-color: #d3d3d3;*/
-    background-color: #fff;
+ 	background-color: #d3d3d3;
+    /*background-color: #fff;*/
  	font-family: 'Open Sans', sans-serif;
 }
 
@@ -12,7 +12,7 @@ body, html{
 
 h1.title { 
 	font-size: 50px;
-	font-family: 'Passion One', cursive; 
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 400; 
 }
 
