--- a/css/estilos.css
+++ b/css/estilos.css
@@ -131,3 +131,24 @@ input[type="text"] {
     font-size: 16px;
     color: #fff;
 }
+
+
+/* ALGO QUE AGREGUÉ */
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    /*color: #333;*/
+    color: #9d9d9d;
+    white-space: nowrap;
+    background-color: #222222;
+}
+
+.navbar-nav>li>.dropdown-menu {
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    background-color: #222222;
+}
