--- a/template/login.html
+++ b/template/login.html
@@ -88,16 +88,18 @@
 							</div>
 						</div>
 
+
+
 						<div class="form-group ">
 							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarAdmin" ng-click="cargarAdmin()">Cargar Administrador</button>
 						</div>
 						
 						<div class="form-group ">
-							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarComprador" ng-click="cargarUsuario()">Cargar Usuario</button>
+							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarUsuario" ng-click="cargarUsuario()">Cargar Usuario</button>
 						</div>
 
 						<div class="form-group ">
-							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarVendedor" ng-click="cargarCliente()">Cargar Cliente</button>
+							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarCliente" ng-click="cargarCliente()">Cargar Cliente</button>
 						</div>
 
 						
