--- a/template/header.html
+++ b/template/header.html
@@ -104,6 +104,17 @@
                         <li><a href="#"><i class="fa fa-sign-out"></i> Sign-out</a></li> 
                     </ul>-->
                 </li>
+
+                <ul class="nav navbar-nav navbar-right">
+                <!-- <li  class="active"><a href="#"><i class="fa fa-suitcase"></i> Projects</a></li> -->
+                <li>
+                    <li><a ng-click="Logout()">Cerrar sesión</a></li>
+                    <!--<ul class="dropdown-menu">
+                         <li><a href="#"><i class="fa fa-cog"></i> Account</a></li>
+                                                <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-sign-out"></i> Sign-out</a></li> 
+                    </ul>-->
+                </li>
             </ul>
         </div>
     </div>
