--- a/template/menu1.html
+++ b/template/menu1.html
@@ -22,16 +22,16 @@
     </div>
 
     <div class="item">
-      <img src="img/img3.jpg" alt="">
+      <img src="img/img4.jpg" alt="">
     </div>
   </div>
 
   <!-- Left and right controls -->
-  <a class="left carousel-control" data-target="#myCarousel" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" data-target="#myCarousel" role="button" data-slide="next">
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
