Mejora header y gráfico

--- a/template/header.html
+++ b/template/header.html
@@ -87,8 +87,8 @@
                                 <li><a ui-sref="altaLocal">Agregar local</a></li>
                                 <li><a ui-sref="modificarLocal">Modificar local</a></li>
                             </ul>
-                        <li><a ui-sref="grillaInforme">Grilla Informes</a></li>
-                    
+                        <li><a ui-sref="grillaInforme">Grilla Informes</a></li> 
+                        <li><a ng-click="GenerarGrafico()">Gráficos</a></li>
                 </li>
 
                 <!-- <li ><a href="#"><i class="fa fa-home"></i> Home</a></li> -->
