--- a/template/grillaInforme.html
+++ b/template/grillaInforme.html
@@ -1,68 +1,74 @@
-  <div class="container">
-	  	<div class="page-header">
-	  		<center><h1>{{DatoTest}}</h1> </center>     
-	  	</div>	           
-	  	<div class="CajaInicio animated pulse">
-	  		<h1>Listado de Informes</h1>
+<div class="container">
+    
+    	<div class="row">
+			<div class="col-md-12">
+				<div class="panel panel-negro">
+					<div class="panel-heading">
+						<h3 class="panel-title">Locales</h3>
+						<div class="pull-right">
+							<!-- <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body"> 
+								
+							</span> -->
+						</div>
+					</div>
+					<div class="panel-body">
+						<input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Developers" />
+					</div>
+				<!-- 	<table class="table table-hover" id="dev-table"> -->
+				<table class="table table-bordred table-striped" id="dev-table">
+						<thead>
+							<tr>
+								<th>Nombre</th>
+								<th class="centrar">  Direccion     </th>
+								<th>  Localidad     </th> 			  					
+			  					<th>  Usuario     </th> 
+			  					<th>  Primera Impresión    </th>
+			  					<th>  Limpieza    </th>
+			  					<th>  Atención    </th>
+			  					<th>  Presentación    </th>
+			  					<th>  Porcentaje    </th> 
+			  					<th>  Fecha    </th>			  					
+			  					<!-- <th>  MODIFICAR        </th>	 --> 
+			  					<th ng-if="esVisible.admin" class="centrar">  BORRAR     </th>
+								<!-- <th ng-if="esVisibleUser">  MODIFICAR     </th>  -->
+							</tr>
+						</thead>
 
-	  		 <input type="search" placeholder="Buscar.." ng-model="mifiltro" class="buscar"></input>
-	  		<table class='table table-hover table-responsive' id="ListadoLocales">
-	  			<thead>
-	  				<tr>
+						<!-- <tr ng-repeat="local in ListadoLocales | filter:mifiltro as resultado"> -->
 
-	  					<th>  Nombre     </th>
-	  					<th >  Localidad     </th>
-	  					<th class="centrar">  Direccion     </th>
-	  					<th class="centrar">  Empleado     </th> 
-	  					<th class="centrar">  P.1     </th> 
-	  					<th class="centrar">  P.2   </th> 
-	  					<th class="centrar">  P.3    </th> 
-	  					<th class="centrar">  P.4   </th> 
-	  					<th class="centrar">  Porcentaje   </th> 
-	  					<th class="centrar">  fecha   </th> 
-	  					<th ng-if="esVisible.admin" class="centrar">  Borrar   </th> 
-	  					<!-- <th  class="centrar">  Ver   </th> -->	
-	  					
-	  				</tr> 
-	  			</thead>
-	  			<tr ng-repeat="informe in ListadoInformes| filter:mifiltro as resultado">
+						<tbody>
 
+							<tr ng-repeat="informe in ListadoInformes | filter:mifiltro as resultado">
+							
+								<td>{{informe.nombre}}</td>
+				  				<td>{{informe.direccion}}</td>
+				  				<td>{{informe.localidad}}</td>
+				  				<td>{{informe.empleado}}</td>
+				  				<td>{{informe.puno}}</td>
+				  				<td>{{informe.pdos}}</td>
+				  				<td>{{informe.ptres}}</td>
+				  				<td>{{informe.pcuatro}}</td>
+				  				<td>{{informe.porcentaje}}%</td>
+				  				<td>{{informe.fecha}}</td>
 
+				  				
+				  				<td ng-if="esVisible.admin" class="centrar"><button class='btn btn-danger' name='Borrar' ng-click="Borrar(informe.id)">   <span class='glyphicon glyphicon-remove-circle'><!-- &nbsp; --></span><!-- Borrar --></button></td>
+							</tr>
 
-	  				<td>{{informe.nombre}}</td>
-	  				<td >{{informe.localidad}}</td>
-	  				<td class="centrar"> {{informe.direccion}}</td>
-	  				<td class="centrar">{{informe.empleado}}</td>
-	  				<td class="centrar">{{informe.puno}}</td>
-	  				<td class="centrar">{{informe.pdos}}</td>
-	  				<td class="centrar">{{informe.ptres}}</td>
-	  				<td class="centrar">{{informe.pcuatro}}</td>
-	  				<td class="centrar">{{informe.porcentaje}}%</td>
-	  				<td class="centrar">{{informe.fecha}}</td>
+							<tr ng-if="resultado.length == 0">
 
+				  				<td></td>							
+				  				<td>No existen informes con esos datos.</td>
+				  				<td></td>
+				  				<td></td>
+				  				<td></td>										
+				  				<td></td>
 
-	  				<!-- <td ng-if="esVisible.adminClient" class="centrar"><button class='btn btn-warning' name='Modificar' ui-sref="modificarLocal({id:local.id, nombre:local.nombre, localidad:local.localidad, mes:local.mes, anio:local.anio, porcentaje:local.porcentaje, empleado:local.empleado, puno:local.puno, pdos:local.pdos, ptres:local.ptres, pcuatro:local.pcuatro})"><span class='glyphicon glyphicon-edit'>&nbsp;</span>Formulario</button></td> -->
+			  				</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 
-	  				<td ng-if="esVisible.admin" class="centrar"><button class='btn btn-danger' name='Borrar' ng-click="Borrar(informe.id)">   <span class='glyphicon glyphicon-remove-circle'>&nbsp;</span>Borrar</button></td>
-
-	  				<!-- <td><button class='btn btn-warning' name='Modificar' ng-click="Modificar()"><span class='glyphicon glyphicon-edit'>&nbsp;</span>Modificar</button></td> -->
-
-
-
-	  			</tr>
-
-
-	  			<tr ng-if="resultado.length == 0">
-
-	  				<td></td>							
-	  				<td>No existen productos con esos datos..</td>
-	  				<td></td>
-	  				<td></td>
-	  				<td></td>										
-	  				<td></td>
-
-	  			</tr>
-	  		</table>
-	  	</div>				
-	  </div>
+		</div>
 	</div>
