--- a/template/login.html
+++ b/template/login.html
@@ -48,7 +48,7 @@
 
 
 		<div class="container">
-			<div class="row main">
+			<div class="row main animated pulse">
 				<!-- <div class="panel-heading">
 	               <div class="panel-title text-center">
 	               		<h1 class="title">Mistery Shopper</h1>
