--- a/template/altaUsuario.html
+++ b/template/altaUsuario.html
@@ -76,7 +76,7 @@
 
 					            <!-- boton remove -->
 					            <button type="button" class="btn btn-danger " ng-click="item.remove()">
-					                <span class="glyphicon glyphicon-trash"></span> cambiar
+					                <span class="glyphicon glyphicon-trash"></span> Cambiar Foto
 					            </button>
 					        </li>		
 			    </ul>
