--- a/template/altaLocal.html
+++ b/template/altaLocal.html
@@ -1,79 +1,64 @@
-<div class="container">
-		<div class="page-header">
-			<center> <h1>{{DatoTest}}</h1>   </center>     
-		</div>
-		<div class="CajaInicio animated bounceInRight">
-			<h1>{{DatoTest}}</h1>
+		<div class="container">
+			<div class="row main animated pulse">
+				<!-- <div class="panel-heading">
+	               <div class="panel-title text-center">
+	               		<h1 class="title">Mistery Shopper</h1>
+	               		<hr />
+	               	</div>
+	            </div>  -->
+				<div class="main-login main-center">
+					<form class="form-horizontal" method="post" action="#">
+						
+						<div class="form-group">
+							<label for="email" class="cols-sm-2 control-label">Nombre</label>
+							<div class="cols-sm-10">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i></span>
+									<input type="text" class="form-control" name="email" id="txtMail" ng-model="local.nombre" placeholder="Ingrese su correo electrónico"/>
+								</div>
+							</div>
+						</div>
 
-			<!-- esto es para el administrador -->
+						<div class="form-group">
+							<label for="username" class="cols-sm-2 control-label">Usuario</label>
+							<div class="cols-sm-10">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-user" aria-hidden="true"></i></span>
+									<input type="text" class="form-control" name="username" id="txtUser" ng-model="nombre" placeholder="Ingrese su usuario"/>
+								</div>
+							</div>
+						</div>
 
-			<form id="FormIngreso"  enctype="multipart/form-data" >
-				
-				<input type="text" name="nombre" ng-model="local.nombre" placeholder="ingrese nombre del local" ng-if="esVisible.admin" value=""/> <span id="lblNombre" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="localidad" ng-model="local.localidad" placeholder="ingrese la localidad" ng-if="esVisible.admin" value="" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="direccion" ng-model="local.direccion" placeholder="direccion" ng-if="esVisible.admin" value="" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="nombre" ng-model="local.nombre" placeholder="ingrese nombre del local" ng-if="esVisible.user" ng-disabled="true" value=""/> <span id="lblNombre" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="localidad" ng-model="local.localidad" placeholder="ingrese la localidad" ng-if="esVisible.user" ng-disabled="true" value="" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="direccion" ng-model="local.direccion" placeholder="direccion" ng-if="esVisible.user" ng-disabled="true" value="" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="gerente" ng-model="local.gerente" placeholder="nombre del gerente" value="" ng-if="esVisible.admin || esVisible.cliente" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-
-				<input type="text" name="empleado" ng-model="local.empleado" placeholder="nombre del empleado" value="" ng-if="esVisible.user" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
+						<div class="form-group">
+							<label for="password" class="cols-sm-2 control-label">Contraseña</label>
+							<div class="cols-sm-10">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-asterisk" aria-hidden="true"></i></span>
+									<input type="password" class="form-control" name="password" id="txtPass" ng-model="clave" placeholder="Ingrese su contraseña"/>
+								</div>
+							</div>
+						</div>
 
 
-				<label ng-if="esVisible.user">1. ¿se presentó diciendo: "buenos días, buenas tardes o buenas noches"?</label>
-				<br>
 
-				<input type="radio" name="respuestaUno" ng-model="local.puno" value="si" ng-if="esVisible.user"><label ng-if="esVisible.user" for="si">SI</label> 
-				<input type="radio" name="respuestaUno" ng-model="local.puno" value="no" ng-if="esVisible.user"><label ng-if="esVisible.user" for="no">NO</label>
+						<div class="form-group ">
+							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarAdmin" ng-click="cargarAdmin()">Cargar Administrador</button>
+						</div>
+						
+						<div class="form-group ">
+							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarUsuario" ng-click="cargarUsuario()">Cargar Usuario</button>
+						</div>
 
-				<br ng-if="esVisible.user">
+						<div class="form-group ">
+							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="rellenarCliente" ng-click="cargarCliente()">Cargar Cliente</button>
+						</div>
 
-				<label ng-if="esVisible.user">2. ¿Tenía puesto el credencial de personal?</label>
-				<br>
+						
+						<div class="form-group ">
+							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="guardar" ng-click="Login()">Log In</button>
+						</div>
 
-				<input type="radio" name="respuestaDos" ng-model="local.pdos" value="si" ng-if="esVisible.user"><label ng-if="esVisible.user" for="si">SI</label> 
-				<input type="radio" name="respuestaDos" ng-model="local.pdos" value="no" ng-if="esVisible.user"><label ng-if="esVisible.user" for="no">NO</label>
-
-				<br ng-if="esVisible.user">
-
-				<label ng-if="esVisible.user">3. ¿Le ofreció alguna promoción?</label>
-				<br ng-if="esVisible.user">
-
-				<input type="radio" name="respuestaTres" ng-model="local.ptres" value="si" ng-if="esVisible.user"><label ng-if="esVisible.user" for="si">SI</label>  
-				<input type="radio" name="respuestaTres" ng-model="local.ptres" value="no" ng-if="esVisible.user"><label ng-if="esVisible.user" for="no">NO</label>
-
-				<br ng-if="esVisible.user">
-
-				<label ng-if="esVisible.user">4. ¿Al finalizar la compra se despidió diciendo: "Muchas gracias por su compra"?</label>
-				<br>
-				<input type="radio" name="respuestaCuatro" ng-model="local.pcuatro" value="si" ng-if="esVisible.user"><label ng-if="esVisible.user" for="si">SI</label>  
-				<input type="radio" name="respuestaCuatro" ng-model="local.pcuatro" value="no" ng-if="esVisible.user"><label ng-if="esVisible.user" for="no">NO</label>
-				<br ng-if="esVisible.user">
-
-				<!-- <input type="text" name="fecha" ng-model="local.fecha" placeholder="ingrese fecha" ng-if="esVisible.user" value=""  /> --> 
-				<!-- <span id="lblDni">{{local.fecha}}</span> -->
-				
-				<!-- <input type="text" name="porcentaje" ng-model="local.porcentaje" placeholder="porcentaje" ng-if="esVisible.user" value="" /> 
-				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80"></span> -->
-
-				<a class="btn btn-primary" name="guardar" ng-click="Guardar()" ><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</a>
-					
-				<input type="hidden" value="" id="idParaModificar" name="agregar" />
-				<input type="hidden" value="" id="hdnAgregar" name="agregar" />
+					</form>
 				</div>
-
-			</form>
-	</div>
-	</div>
+			</div>
+		</div>
