--- a/template/altaUsuario.html
+++ b/template/altaUsuario.html
@@ -75,7 +75,7 @@
 					            </button-->
 
 					            <!-- boton remove -->
-					            <button type="button" class="btn btn-danger " ng-click="item.remove()">
+					            <button type="button" class="btn btn-primary " ng-click="item.remove()">
 					                <span class="glyphicon glyphicon-trash"></span> Cambiar Foto
 					            </button>
 					        </li>		
@@ -84,7 +84,7 @@
 				 <input type="file" ng-show="!uploader.queue[0]" nv-file-select uploader="uploader"/>
      
 
-				<a class="btn btn-info " name="guardar" ng-click="Guardar()" ><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</a>
+				<a class="btn btn-primary " name="guardar" ng-click="Guardar()" ><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</a>
 					
 				<input type="hidden" value="" id="idParaModificar" name="agregar" />
 				<input type="hidden" value="" id="hdnAgregar" name="agregar" />
@@ -94,7 +94,7 @@
 
 
 
-					</form>
-				</div>
-			</div>
+			</form>
 		</div>
+	</div>
+</div>
