--- a/template/encuesta.html
+++ b/template/encuesta.html
@@ -70,7 +70,7 @@
 						</div>
 
 						<div class="form-group" ng-if="esVisible.admin || esVisible.cliente">
-							<label for="direccion" class="cols-sm-2 control-label">Gerente</label>
+							<label for="gerente" class="cols-sm-2 control-label">Gerente</label>
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="glyphicon glyphicon-home" aria-hidden="true"></i></span>
@@ -80,7 +80,7 @@
 						</div>
 
 						<div class="form-group" ng-if="esVisible.user">
-							<label for="direccion" class="cols-sm-2 control-label">Usuario</label>
+							<label for="usuario" class="cols-sm-2 control-label">Usuario</label>
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="glyphicon glyphicon-home" aria-hidden="true"></i></span>
@@ -88,15 +88,11 @@
 								</div>
 							</div>
 						</div>
-
-
-
-											
-						<div class="form-group ">
-							<button type="button" class="btn btn-primary btn-lg btn-block login-button" name="guardar" ng-click="Login()">Log In</button>
-						</div>
-
-						<label ng-if="esVisible.user">1. ¿se presentó diciendo: "buenos días, buenas tardes o buenas noches"?</label>
+										
+						
+						
+						<br/><center><label ng-if="esVisible.user">ENCUESTA</label></center>
+						<label ng-if="esVisible.user">1. ¿Se presentó diciendo: "buenos días, buenas tardes o buenas noches"?</label>
 						<br>
 
 						<input type="radio" name="respuestaUno" ng-model="local.puno" value="si" ng-if="esVisible.user"><label ng-if="esVisible.user" for="si">SI</label> 
