--- a/template/grillaInforme.html
+++ b/template/grillaInforme.html
@@ -4,7 +4,7 @@
 			<div class="col-md-12">
 				<div class="panel panel-negro">
 					<div class="panel-heading">
-						<h3 class="panel-title">Locales</h3>
+						<h3 class="panel-title">Informes</h3>
 						<div class="pull-right">
 							<!-- <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body"> 
 								
