--- a/template/grillaInforme.html
+++ b/template/grillaInforme.html
@@ -9,6 +9,14 @@
 				  	</div>					
 				</form>
 
+				<div class="text-center">
+					<div class="btn-group">
+						<td><button type="button" class="btn btn-primary" ng-click="GenerarPDF()"><span class='glyphicon glyphicon-file'>&nbsp;</span>Generar PDF</button></td>
+						<td><button type="button" class="btn btn-primary" ng-click="GenerarExcel()"><span class=' 	glyphicon glyphicon-th-list'>&nbsp;</span>Generar Excel</button></td>
+						<td ng-if="esAdmin"><button type="button" class="btn btn-primary" name='alta' ui-sref="altaUsuario"><span class='glyphicon glyphicon-upload'>&nbsp;</span>Alta Sucursal</button></td>			
+					</div>
+				</div>
+
 				<div class="panel panel-negro">
 					<div class="panel-heading">
 						<h3 class="panel-title">Informes</h3>
