--- a/template/header.html
+++ b/template/header.html
@@ -1,7 +1,7 @@
   <!-- COMIENZO JUMBOTRON -->
 <section class="jumbotron">
     <div class="container">
-        <h1 class="titulo-blog"><b>Mistery</b> Shopper</h1>
+        <h1 class="titulo-blog"><b>Mistery</b> Shopper CV</h1>
         <p>TP Final Laboratorio IV 2016</p>
 
         <!-- <li class="nav navbar-nav navbar-right">
