--- a/template/menu.html
+++ b/template/menu.html
@@ -2,7 +2,7 @@
 				<div class="page-header">
 					<center><h1>Mystery Shopper</h1> </center>     
 				</div>
-				<div class="CajaInicio animated bounceInRight">
+				<div class="CajaInicio animated pulse">
 									<!-- <h1>PRODUCTOS</h1> -->
 								
 									<form id="FormIngreso">
