--- a/template/encuesta.html
+++ b/template/encuesta.html
@@ -1,5 +1,5 @@
 <div class="container">
-			<div class="row main">
+			<div class="row main animated pulse" >
 				<!-- <div class="panel-heading">
 	               <div class="panel-title text-center">
 	               		<h1 class="title">Mistery Shopper</h1>
