--- a/template/grillaUsuario.html
+++ b/template/grillaUsuario.html
@@ -1,6 +1,6 @@
 <div class="container">
     
-    	<div class="row">
+    	<div class="row animated pulse">
 			<div class="col-md-12">
 
 				
@@ -13,9 +13,9 @@
 
 				<div class="text-center">
 					<div class="btn-group">
-						<td><button type="button" class="btn btn-primary" ng-click="GenerarPdfsu()"><span class='glyphicon glyphicon-file'>&nbsp;</span>Generar PDF</button></td>
-						<td><button type="button" class="btn btn-primary" ng-click="GenerarExcelsu()"><span class=' 	glyphicon glyphicon-th-list'>&nbsp;</span>Generar Excel</button></td>
-						<td ng-if="esAdmin"><button type="button" class="btn btn-primary" name='alta' ui-sref="altaUsuario"><span class='glyphicon glyphicon-upload'>&nbsp;</span>Alta Sucursal</button></td>			
+						<td><button type="button" class="btn btn-primary" ng-click="GenerarPDF()"><span class='glyphicon glyphicon-file'>&nbsp;</span>Generar PDF</button></td>
+						<td><button type="button" class="btn btn-primary" ng-click="GenerarExcel()"><span class=' 	glyphicon glyphicon-th-list'>&nbsp;</span>Generar Excel</button></td>
+						<td ng-if="esAdmin"><button type="button" class="btn btn-primary" name='alta' ui-sref="altaUsuario"><span class='glyphicon glyphicon-upload'>&nbsp;</span>Alta Usuario</button></td>			
 					</div>
 				</div>
 
@@ -37,11 +37,11 @@
 							<tr>
 								<th>Correo</th>
 			                    <th>Nombre</th>
-			                    <th>Clave</th>
+			                    <!-- <th>Clave</th> -->
 			                    <th>Tipo</th>
 			                    <th>Foto</th>
-			                    <th>Modificar</th>                      
-                       			<th>Eliminar</th>
+			                    <th>MODIFICAR</th>                      
+                       			<th>ELIMINAR</th>
 							</tr>
 						</thead>
 
@@ -53,13 +53,13 @@
 
 								<td>{{usuario.correo}}</td>
 								<td>{{usuario.nombre}}</td>
-								<td>{{usuario.clave}}</td>
+								<!-- <td>{{usuario.clave}}</td> -->
 								<td>{{usuario.tipo}}</td>
 								<td><img  class='fotoGrilla' ng-src="imagenes/{{usuario.foto}}" ></td>
 								
-								<td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" name='Modificar' ui-sref="modificar({id:usuario.id, correo:usuario.correo, nombre:usuario.nombre , clave:usuario.clave, tipo:usuario.tipo, foto:usuario.foto})" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
+								<td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class='btn btn-warning' data-title="Edit" data-toggle="modal" data-target="#edit" name='Modificar' ui-sref="modificar({id:usuario.id, correo:usuario.correo, nombre:usuario.nombre , clave:usuario.clave, tipo:usuario.tipo, foto:usuario.foto})" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
     
-    							<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" name='Borrar' ng-click="Borrar(usuario)"><span class="glyphicon glyphicon-trash"></span></button></p></td>
+    							<td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class='btn btn-danger' data-title="Delete" data-toggle="modal" data-target="#delete" name='Borrar' ng-click="Borrar(usuario)"><span class="glyphicon glyphicon-trash"></span></button></p></td>
 							
 								
 							</tr>
