--- a/template/menu1.html
+++ b/template/menu1.html
@@ -1,38 +1,11 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
+<div class="container">
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img/img1.jpg" alt="">
-    </div>
-
-    <div class="item">
-      <img src="img/img2.jpg" alt="">
-    </div>
-
-    <div class="item">
-      <img src="img/img3.jpg" alt="">
-    </div>
-
-    <div class="item">
-      <img src="img/img4.jpg" alt="">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+        <div class="row animated pulse">
+            <div class="col-lg-12 text-center">
+                <h1>Bienvenido<!--  <directiva>{{nombre.usuario}}</directiva> --></h1>
+                <img src="img/bannerchico.gif" responsive alt="">
+                <p class="lead"></p>
+                
+            </div>
+        </div>
 </div>
